tests/good/double_mut_ref.mu
let mut x = 0
let mut y = mut ref x
let mut z = mut ref x