tests/bad/mut_from_immut.mu
let mut x = 0
let mut y = ref x
let mut p = mut ref *y